--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dil-khush.co.uk/",
+  "homepage": "https://github.com/dilkhush2025/Dilkhush-Kitchen.git",
   "name": "estaurant",
   "version": "0.1.0",
   "private": true,
