github deploy workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://github.com/dilkhush2025/Dilkhush-Kitchen.git",
-  "name": "estaurant",
+  "name": "restaurant",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
