--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/dilkhush2025/Dilkhush-Kitchen.git",
+  "homepage": "https://github.com/dilkhush2025/Dilkhush-Kitchen",
   "name": "restaurant",
   "version": "0.1.0",
   "private": true,
