--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dilkhush2025.github.io/Dilkhush-Kitchen",
+  "homepage": "https://dil-khush.co.uk",
   "name": "restaurant",
   "version": "0.1.0",
   "private": true,
